# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff-actions.yml  gendiff_actions.yml
gendiff/: gendiff_.py
gendiff/modules/: generate_diff.py
gendiff/modules/formaters/: plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_generate_diff.py  test_generate_diff_json.py  test_generate_diff_plain.py  test_generate_diff_stylish.py  test_generate_diff_stylish_multy.py
gendiff/tests/fixtures/: expected_results.py
gendiff/tests/fixtures/multilevel/: expected_result_json.txt
